argo-apps/rhoai-playground/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
    opendatahub.io/dashboard: "true"
    opendatahub.io/generated-namespace: "true"
  name: rhoai-playground
